2014-12-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.4.0
	* DESCRIPTION: Update to note we need QL 1.4.0 or later

	* configure.ac: Mark as 0.4.0, allow for newer g++ versions
	* configure: Rebuilt

2014-11-29  Dirk Eddelbuettel  <edd@debian.org>

	* inst/NEWS.Rd: Expanded reflecting changes since last release

2014-11-27  Dirk Eddelbuettel  <edd@debian.org>

	* inst/NEWS.Rd: Added -- better late than never

	* man/Calendars.Rd: Add documentation for advanceDate

	* man/Schedule.Rd: Add standard reference to QuantLib to the
	details section (which was empty)

2014-11-07  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Call via travis_wait to allow for potential timeout

	* NAMESPACE: Also export advanceDate()

2014-11-07 Michele Salvadore <michele.salvadore@gmail.com>

	* DESCRIPTION: New minor version
	* NAMESPACE: Export Schedule
	* R/schedule.R: Added Schedule function to expose the QuantLib::Schedule to R
	* man/schedule.Rd: Ditto
	* src/schedule.cpp: Ditto

2014-10-30  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Tighten exportPattern for .default as suggested by Bill Dunlap

2014-10-29  Michele Salvadore <michele.salvadore@gmail.com>

	* R/bond.R: Added a price parameter to FixedRateBond to calculate based on clean price
	* src/bonds.cpp: new function wrapping price based calculation
	* man/Bond.Rd: updated documentation and examples
	* man/FixedRateBond.Rd: Ditto
	* tests/RQuantLib.R: Corresponding test update
	* tests/RQuantLib.Rout.save: Ditto

2014-10-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: New minor version

	* src/bonds.cpp: Remove last SEXP instances in function interfaces
	* src/hullwhite.cpp: Idem
	* src/utils.cpp: Idem

	* inst/include/rquantlib_internal.h: Updated accordingly

2014-10-26  Dirk Eddelbuettel  <edd@debian.org>

	* src/discount.cpp: Curve exported in 'table' object now advances by
	roughly one business months, also switched to using STL containers
	grown and then exported back to R
