@@ -1,7 +1,7 @@
 Package: RQuantLib
 Title: R Interface to the QuantLib Library
-Version: 0.4.0
-Date: 2014-12-01
+Version: 0.4.0.1
+Date: 2014-12-03
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Author: Dirk Eddelbuettel, Khanh Nguyen (during 2009-2010)
 Description: The RQuantLib package makes parts of QuantLib accessible from R
@@ -10,7 +10,7 @@ Description: The RQuantLib package makes parts of QuantLib accessible from R
  for quantitative analysis, modeling, trading, and risk management of
  financial assets.
 Depends: R (>= 2.10.0)
-Suggests: rgl, zoo, RUnit
+Suggests: rgl, zoo, RUnit, shiny
 Imports: methods, Rcpp (>= 0.11.0)
 LinkingTo: Rcpp
 SystemRequirements: QuantLib library (>= 1.4.0) from http://quantlib.org, 
